--- a/e-emploi-frontend/src/index.css
+++ b/e-emploi-frontend/src/index.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 body {
   margin: 0;
   @apply overflow-y-scroll;
@@ -16,4 +19,8 @@ body::-webkit-scrollbar {
 /* For Firefox */
 body::-moz-scrollbar {
   @apply hidden;
+}
+
+.ant-menu-item-active {
+  border-bottom: none;
 }
