--- a/e-emploi-frontend/src/index.css
+++ b/e-emploi-frontend/src/index.css
@@ -6,6 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap');
+
 body {
   margin: 0;
   @apply overflow-y-scroll;
